hphp/test/zend/good/Zend/tests/traits/language008a.php.expectf

Fatal error: Call to protected MyClass::sayHello() from invalid context in %s/language008a.php on line 16
